src/test/ui/dep-graph/dep-graph-assoc-type-codegen.stderr
error: OK
  --> $DIR/dep-graph-assoc-type-codegen.rs:28:5
   |
LL |     #[dustc_then_this_would_need(typeck)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

